--- a/djinn/inc_mgmt/templates/inc_mgmt/base_js_css.html
+++ b/djinn/inc_mgmt/templates/inc_mgmt/base_js_css.html
@@ -7,6 +7,6 @@
 <script src="{% static 'inc_mgmt/bootstrap/js/bootstrap.min.js' %}"></script>
 <link rel="stylesheet" href="{% static 'inc_mgmt/bootstrap_select/bootstrap-select.min.css' %}">
 <script src="{% static 'inc_mgmt/bootstrap_select/bootstrap-select.min.js' %}"></script>
-<link rel="stylesheet" href="{% static 'inc_mgmt/css/registration.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'inc_mgmt/css/registration.css' %}"> -->
 <link rel="stylesheet" href="{% static 'inc_mgmt/css/style.css' %}">
 <link rel="shortcut icon" type="image/png" href="{% static 'djinn/favicon.ico' %}"/>
