--- a/djinn/inc_mgmt/static/inc_mgmt/css/registration.css
+++ b/djinn/inc_mgmt/static/inc_mgmt/css/registration.css
@@ -24,9 +24,8 @@ a.dropdown-item:hover {
 }
 
 .alert {
-	position: absolute;
-	margin-top: 10%;
-	top: 0;
+	width: fit-content;
+	margin: -20px auto 20px auto;
 }
 
 .form-registration {
@@ -94,4 +93,6 @@ a.dropdown-item:hover {
 	margin: 0 auto;
 }
 
+.form-control {
+	margin: 10px;
 }
