--- a/djinn/inc_mgmt/static/inc_mgmt/css/style.css
+++ b/djinn/inc_mgmt/static/inc_mgmt/css/style.css
@@ -5,12 +5,68 @@ a:not(.btn-secondary) {
 }
 
 a:hover {
+	color: #8553e2;
+	text-decoration: none !important;
+}
+
+a.btn-outline-primary:hover {
 	color: #fff !important;
 }
 
-label {
+label:not(class="form-check-label") {
 	text-transform: uppercase;
 	letter-spacing: 0.05em;
+}
+
+.custom-control-label:before{
+	background-color: #fff;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before{
+	background-color: #8553e2;
+	border: 1px solid #8553e2;
+	border-color: rgba(133, 83, 226, 0.8);
+	box-shadow: 0 1px 1px rgba(133, 83, 226, 0.075) inset, 0 0 8px rgba(133, 83, 226, 0.6);
+	outline: 0 none;
+}
+
+.custom-control-input:focus ~ .custom-control-label::before {
+	border-color: rgba(133, 83, 226, 0.8) !important;
+	box-shadow: 0 1px 1px rgba(133, 83, 226, 0.075) inset, 0 0 8px rgba(133, 83, 226, 0.6);
+	outline: 0 none;
+}
+
+.input-text {
+	padding: 5px;
+	font-size: 16px;
+	font-family: inherit;
+	font-weight: 400;
+	color: #495057;
+	background-clip: padding-box;
+	border: 1px solid #ced4da;
+	border-radius: .25rem;
+	transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.uneditable-input:focus {   
+  border-color: rgba(133, 83, 226, 0.8);
+  box-shadow: 0 1px 1px rgba(133, 83, 226, 0.075) inset, 0 0 8px rgba(133, 83, 226, 0.6);
+  outline: 0 none;
 }
 
 .navbar-logo {
@@ -24,7 +80,8 @@ label {
 	width: 200px;
 	margin-left: 0;
 	border: 10px;
-	filter: drop-shadow(0.5px 0.5px 10px #76686b);
+	/* box-shadow: 0 1px 6px #8553e2, 0 1px 4px #8553e2; */
+	filter: drop-shadow(0.5px 0.5px 5px #000);
 }
 
 .btn-outline-primary {
@@ -76,6 +133,15 @@ label {
 	margin: 10px;
 }
 
+.ticket-list-filter {
+	width: fit-content;
+	margin-left: 200px;
+	padding: 10px;
+	border: 2px solid #343a40;
+	border-radius: 5px;
+	/* box-shadow: 0 1px 6px  #8553e2; */
+}
+
 /* ticket/* */
 .ticket-form {
 	padding: 10px;
@@ -92,7 +158,7 @@ label {
 }
 
 .ticket-label {
-	margin: 10px 0 -10px 10px;
+	margin: 10px 0 0px 0px;
 }
 
 .ticket-update-label {
@@ -151,17 +217,32 @@ table th {
 
 /* area_list */
 .div-area-list {
-	width: 25%;
+	width: 30%;
 	float: left;
-	margin: 1% 3% 0 5%;
+	margin-left: 2%;
 	text-align: center;
+	/* border: 2px solid #8553e2; */
+	border-radius: 5px;
+	filter: drop-shadow(0.5px 0.5px 2px #000);	
+	background: #8553e2;
+	color: white;
+	/* box-shadow: 0 1px 6px #8553e2, 0 1px 4px #8553e2; */
 }
 
 .div-area-list:hover {
-	background-color: #8553e2;
-	color: white;
+	background: rgb(133,95,226);
+}
+
+.area-name {
+    font-weight: 500;
+	/* text-shadow: 0.5px 0.5px 1px #000; */
 }
 
 .form-control {
-	margin: 10px;
+	/* margin: 10px; */
+}
+
+/* activate_account_list */
+.list-group.no-markers {
+	list-style: none;
 }
