--- a/djinn/inc_mgmt/templates/inc_mgmt/area_list.html
+++ b/djinn/inc_mgmt/templates/inc_mgmt/area_list.html
@@ -2,7 +2,7 @@
 {% load area_ticket_status_count %}
 {% block content %}
 	{% for area in area_list %}
-		<a href="{% url 'inc_mgmt:ticket_list' area_name=area.name filter='all' %}">
+		<a href="{% url 'inc_mgmt:ticket_list' area_name=area.name %}">
 			<div class="jumbotron div-area-list" style="align-content: center";>
 				<h1 class="display-4 area-name">{{ area.name }}</h1>
 				{% if user.is_staff %}
