--- a/djinn/inc_mgmt/templates/inc_mgmt/ticket/new.html
+++ b/djinn/inc_mgmt/templates/inc_mgmt/ticket/new.html
@@ -34,7 +34,7 @@
 					<button type="submit" class="btn btn-lg btn-primary btn-block auto-width-btn ticket-btn-save">Submit</button>
 				</th>
 				<th>
-					<a class="btn btn-secondary" style="margin-left: 20px; color: white;" href="{% url 'inc_mgmt:ticket_list' area_name=area_name filter='all' %}">Cancel</a>
+					<a class="btn btn-secondary" style="margin-left: 20px; color: white;" href="{% url 'inc_mgmt:ticket_list' area_name=area_name %}">Cancel</a>
 				</th>
 			</table>
 		</div>
