--- a/djinn/inc_mgmt/templates/inc_mgmt/base.html
+++ b/djinn/inc_mgmt/templates/inc_mgmt/base.html
@@ -18,10 +18,19 @@
 						<li class="nav-item">
 							<a class="nav-link" href="{% url 'inc_mgmt:index' %}">Home<span class="sr-only">(current)</span></a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Metrics<span class="sr-only">(current)</span></a>
-						</li>
 						{% if user.is_staff %}
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Manage
+								</a>
+								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" href="{% url 'inc_mgmt:activate_user_list' %}">Activate users</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#">Metrics</a>
+								</div>
+							</li>
+						{% endif %}
+						{% if user.is_superuser %}
 							<li class="nav-item">
 								<a class="nav-link" href="/admin">Admin<span class="sr-only">(current)</span></a>
 							</li>
