--- a/djinn/inc_mgmt/static/inc_mgmt/css/style.css
+++ b/djinn/inc_mgmt/static/inc_mgmt/css/style.css
@@ -48,6 +48,10 @@ label:not(class="form-check-label") {
 	transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+input[type="search"]{
+	margin-left: 0;
+}
+
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
@@ -64,9 +68,13 @@ input[type="search"]:focus,
 input[type="tel"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus {   
-  border-color: rgba(133, 83, 226, 0.8);
-  box-shadow: 0 1px 1px rgba(133, 83, 226, 0.075) inset, 0 0 8px rgba(133, 83, 226, 0.6);
+  border-color: rgba(133, 83, 226, 0.8) !important;
+  box-shadow: 0 1px 1px rgba(133, 83, 226, 0.075) inset, 0 0 8px rgba(133, 83, 226, 0.6) !important;
   outline: 0 none;
+}
+
+.dropdown-item.active {
+	background-color: #E6E9EC;
 }
 
 .navbar {
@@ -75,10 +83,6 @@ input[type="color"]:focus,
 
 .navbar a:hover:not(.dropdown-item) {
 	color: #fff !important;
-}
-
-a.dropdown-item:hover {
-	background-color: #f2f0f3 !important;
 }
 
 .navbar-logo {
@@ -98,7 +102,7 @@ a.dropdown-item:hover {
 
 .btn-outline-primary {
 	color: #8553e2;
-	border-color: #8553e2;
+	border: 2px solid #8553e2;
 }
 
 .btn-primary:hover {
@@ -192,9 +196,9 @@ a.dropdown-item:hover {
 }
 
 .ticket-update-div {
-	width: 50%;
-	padding: 10px;
-	margin: 20px;
+	width: fit-content;
+	padding: 10px 20px 10px 10px;
+	margin: 20px 0 20px 0;
 	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 }
 
